--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,6 @@ agenda/agenda.gui/.classpath
 agenda/agenda.gui/.project
 agenda/agenda.gui/.settings
 agenda/agenda.gui/target
-agenda/agenda.ont/.classpath
-agenda/agenda.ont/.project
-agenda/agenda.ont/.settings
-agenda/agenda.ont/target
 agenda/agenda.pom/.project
 agenda/agenda.pom/.settings
 agenda/agenda.pom/composite/.classpath
@@ -174,6 +170,10 @@ nutritional/nutritional.uiclient.basic/.classpath
 nutritional/nutritional.uiclient.basic/.project
 nutritional/nutritional.uiclient.basic/.settings
 nutritional/nutritional.uiclient.basic/target
+ontologies/agenda.ont/.classpath
+ontologies/agenda.ont/.project
+ontologies/agenda.ont/.settings
+ontologies/agenda.ont/target
 ontologies/ont.biomedicalsensors/.classpath
 ontologies/ont.biomedicalsensors/.project
 ontologies/ont.biomedicalsensors/.settings
