--- a/ontologies/ont.agendaEventSelection/pom.xml
+++ b/ontologies/ont.agendaEventSelection/pom.xml
@@ -3,15 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.universAAL.ontology</groupId>
+		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
-		<relativePath>../pom</relativePath>
+		<version>1.3.1-SNAPSHOT</version>
+		<relativePath>../ont.pom</relativePath>
 	</parent>
+	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.agendaEventSelection</artifactId>
-	<version>1.2.2-SNAPSHOT</version>
+	<version>1.3.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<name>Agenda AAL Service Event Selection Tool Ontology</name>
+	<name>Agenda AAL Service Event Selection Ontology</name>
 	<description>Ontology for selecting Agenda and Reminders AAL service events</description>
 	<build>
 		<plugins>
@@ -46,27 +47,15 @@
 		</plugins>
 	</build>
 	<dependencies>
-	    <dependency>
-      <groupId>org.universAAL.support</groupId>
-      <artifactId>itests</artifactId>
-    </dependency>
+		<dependency>
+			<groupId>org.universAAL.support</groupId>
+			<artifactId>itests</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.agenda</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.apache.felix</groupId>-->
-<!--			<artifactId>org.osgi.core</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.felix</groupId>-->
-<!--			<artifactId>org.osgi.compendium</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.universAAL.middleware</groupId>-->
-<!--			<artifactId>mw.bus.context.core</artifactId>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service.core</artifactId>
