--- a/ont.agenda/pom.xml
+++ b/ont.agenda/pom.xml
@@ -3,13 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.universAAL.ontology</groupId>
+		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
+	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.agenda</artifactId>
-	<version>1.2.2-SNAPSHOT</version>
+	<version>1.3.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service Ontology</name>
 	<description>Ontology for main Agenda and Reminders AAL service concepts</description>
@@ -46,10 +47,10 @@
 		<!--			<groupId>org.apache.felix</groupId>-->
 		<!--			<artifactId>org.osgi.compendium</artifactId>-->
 		<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.universAAL.middleware</groupId>-->
-<!--			<artifactId>mw.bus.context.core</artifactId>-->
-<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>org.universAAL.middleware</groupId>-->
+		<!--			<artifactId>mw.bus.context.core</artifactId>-->
+		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service.core</artifactId>
