--- a/agenda/agenda.pom/pom.xml
+++ b/agenda/agenda.pom/pom.xml
@@ -5,11 +5,12 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>C.1</version>
+		<version>D.0</version>
 		<relativePath>../new_services.pom/pom.xml</relativePath>
 	</parent>
+	
 	<artifactId>agenda.pom</artifactId>
-	<version>C.1.1-SNAPSHOT</version>
+	<version>D.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>Agenda AAL Service Parent POM</name>
@@ -33,16 +34,9 @@
 	</properties>
 
 	<modules>
-		<!--<module>../../../../ontologies/trunk/agenda.ont</module>-->
-		<!--
-			<module>../../../../ontologies/trunk/agenda.eventSelection.ont</module>
-		-->
-		<!--
-			after moving ontologies to ont trunk replace below 2 rows with the 2
-			from above
-		-->
-		<module>../agenda.ont</module>
-		<module>../agenda.eventSelection.ont</module>
+		<!--ontology artefacts moved to common ontologies pom-->
+<!--		<module>../ont.agenda</module>-->
+<!--		<module>../ont.agendaEventSelection</module>-->
 		<module>../agenda.server</module>
 		<module>../agenda.client</module>
 		<module>../agenda.gui</module>
@@ -53,16 +47,17 @@
 	</modules>
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.agenda</artifactId>
-				<version>1.2.2-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.agendaEventSelection</artifactId>
-				<version>1.2.2-SNAPSHOT</version>
-			</dependency>
+<!--ontology artefacts moved to common ontologies pom-->
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.ontology</groupId>-->
+<!--				<artifactId>ont.agenda</artifactId>-->
+<!--				<version>1.3.0</version>-->
+<!--			</dependency>-->
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.ontology</groupId>-->
+<!--				<artifactId>ont.agendaEventSelection</artifactId>-->
+<!--				<version>1.2.2-SNAPSHOT</version>-->
+<!--			</dependency>-->
 			<dependency>
 				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>agenda.server</artifactId>
