--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>agenda.runner</artifactId>
   <packaging>jar</packaging>  
-  <version>C.1.1-SNAPSHOT</version>
+  <version>D.0.1-SNAPSHOT</version>
   <name>Agenda AAL Service Runner</name>
 
   <build>
@@ -17,15 +17,87 @@
         <configuration>
           <args>pax.configuration</args>
           <provision>
-    <!--          agenda C.1.1-SNAPSHOT -->
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.2.12-SNAPSHOT/composite</provision>
-			<provision>wrap:mvn:org.universAAL.ui/gui.swing.bluesteelLAF/1.2.2-SNAPSHOT</provision>
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.2-SNAPSHOT/composite</provision>
-<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.3-SNAPSHOT/composite</provision>-->
-<!--			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.1.1-SNAPSHOT/composite</provision>-->
+					<!-- Third parties -->
+     					<provision>mvn:org.apache.felix/org.osgi.compendium/1.4.0</provision>
+ 						<provision>mvn:org.apache.felix/org.apache.felix.configadmin/1.2.4</provision>
+						<provision>mvn:org.apache.felix/org.apache.felix.upnp.basedriver</provision>
+						<provision>wrap:mvn:org.bouncycastle/bcmail-jdk16/1.46</provision>
+						<provision>wrap:mvn:org.bouncycastle/bcprov-jdk16/1.46</provision>
+						<provision>wrap:mvn:org.bouncycastle/jce.jdk13/144</provision>
+							<!-- Pax runner -->
+						<provision>mvn:org.ops4j.pax.logging/pax-logging-api/1.6.3</provision>
+						<provision>mvn:org.ops4j.pax.logging/pax-logging-service/1.6.3</provision>
+						<provision>wrap:mvn:org.ops4j.pax.confman/pax-confman-propsloader/0.2.2</provision>
+							<!-- UIFW -->
+						<provision>mvn:org.ops4j.pax.web/pax-web-jetty-bundle/1.0.5</provision>
+						<provision>mvn:org.ops4j.pax.web/pax-web-spi/1.0.5</provision>
+						<provision>mvn:org.ops4j.pax.web/pax-web-api/1.0.5</provision>
+						<provision>mvn:org.ufacekit.osgi/swingx.osgi/0.9.2</provision>
+							<!-- MW -->
+						<provision>wrap:mvn:ch.ethz.iks.r-osgi/remote/1.0.0.RC4</provision>
+							<!-- Ontologies -->
+						<provision>wrap:mvn:jp.go.ipa/jgcl/1.0</provision>
+						<provision>wrap:mvn:java3d/j3d-core/1.3.1</provision>
+						<provision>mvn:org.apache.felix/org.apache.felix.configadmin/1.2.4</provision>
+						<provision>wrap:mvn:java3d/vecmath/1.3.1</provision>
+							<!-- Platform -->
 
-<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.1-2MODALITIES/composite</provision> -->
-<!--			<provision>mvn:org.universAAL.tools/tools.log_mon/1.2.1-SNAPSHOT</provision>-->
+						<provision>wrap:mvn:org.jdom/jdom/1.1.3</provision>
+							<!-- Databases -->
+<!--						<provision>wrap:mvn:mysql/mysql-connector-java/5.1.18</provision>-->
+<!--						<provision>mvn:org.apache.derby/derby/10.7.1.1</provision>-->
+					
+					<!-- MW -->
+						<provision>mvn:org.universAAL.middleware/mw.container.xfaces.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.container.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.acl.interfaces.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.acl.upnp.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.acl.rosgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.acl.bridge.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.bus.model.osgi/1.3.1-SNAPSHOT</provision> 
+						<provision>mvn:org.universAAL.middleware/mw.data.representation.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.data.serialization.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.bus.service.osgi/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.middleware/mw.bus.context.osgi/1.3.1-SNAPSHOT</provision> 
+						<provision>mvn:org.universAAL.middleware/mw.bus.ui.osgi/1.3.1-SNAPSHOT</provision> 
+											
+					<!-- Ontologies -->
+							<!-- Platform -->
+						<provision>mvn:org.universAAL.ontology/ont.phWorld/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ontology/ont.profile/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ontology/ont.che/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ontology/ont.impairment/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ontology/ont.profile.health/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ontology/ont.profile.uipreferences/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ontology/ont.profile.userid/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ontology/ont.profile.ui.mainmenu/1.3.1-SNAPSHOT</provision>
+
+					<!-- Context -->				
+<!--						<provision>mvn:org.universAAL.context/ctxt.che/1.2.0@nostart</provision>-->
+<!--						<provision>mvn:org.universAAL.context/ctxt.che.mobile/1.2.0@nostart</provision>-->
+<!--						<provision>mvn:org.universAAL.context/ctxt.prof.server/1.2.0@nostart</provision>-->
+							<!-- Security -->
+						<provision>mvn:org.universAAL.security/security.authorizator/1.3.1-SNAPSHOT</provision>
+							<!-- RI -->
+						<provision>mvn:org.universAAL.remote/ri.servicegateway/1.3.1-SNAPSHOT</provision>
+							<!-- UIFW -->
+						<provision>mvn:org.universAAL.ui/ui.dm/1.3.1-SNAPSHOT</provision>
+						<provision>wrap:mvn:org.universAAL.ui/ui.handler.gui.swing.bluesteelLAF/1.3.1-SNAPSHOT</provision>
+						<provision>mvn:org.universAAL.ui/ui.handler.gui.swing/1.3.1-SNAPSHOT</provision>				
+						<provision>mvn:org.universAAL.ui/ui.handler.web/1.3.1-SNAPSHOT</provision> 
+
+					<!-- Agenda AAL Service -->
+					<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/D.0.1-SNAPSHOT/composite</provision>          
+          
+          
+    <!--  agenda D.0.1-SNAPSHOT  more compact run configuration with platform components wrapped inside composites also-->
+<!--    		<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/D.0.1-SNAPSHOT/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.3.1-SNAPSHOT/composite</provision>-->
+<!--			<provision>wrap:mvn:org.universAAL.ui/ui.handler.gui.swing.bluesteelLAF/1.3.1-SNAPSHOT</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.3.1-SNAPSHOT/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.3.1-SNAPSHOT/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.1-2MODALITIES/composite</provision>-->
+<!--			<provision>mvn:org.universAAL.tools/tools.log_mon/1.3.1-SNAPSHOT</provision>-->
 	 </provision>
         </configuration>	
       </plugin>    	
