--- a/ont.biomedicalsensors/pom.xml
+++ b/ont.biomedicalsensors/pom.xml
@@ -3,16 +3,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.universAAL.ontology.services</groupId>
+		<artifactId>ont.pom</artifactId>
+		<relativePath>../ont.pom</relativePath>
+		<version>1.3.1-SNAPSHOT</version>
+	</parent>
 	<artifactId>ont.biomedicalsensors</artifactId>
 	<packaging>bundle</packaging>
 	<name>The Biomedical Sensors Ontology</name>
 	<description>An ontology defining the most general concepts from Biomedical Sensors.</description>
 	<dependencies>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.phWorld</artifactId>
-
-		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation.core</artifactId>
@@ -32,6 +33,12 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.phWorld</artifactId>
+			<version>1.3.1-SNAPSHOT</version>
+			<type>bundle</type>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -42,20 +49,16 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.ontology.Activator</Bundle-Activator>
+						
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package>org.universAAL.ontology.biomedicalsensors</Export-Package>
-						<Private-Package>org.universAAL.ontology</Private-Package>
+						<Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-	<parent>
-		<groupId>org.universAAL.ontology</groupId>
-		<artifactId>ont.pom</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
-		<relativePath>../ont.pom</relativePath>
-	</parent>
+	
+	<groupId>org.universAAL.ontology</groupId>
 </project>
