--- a/health/health.biomedicalsensors.uiclient/pom.xml
+++ b/health/health.biomedicalsensors.uiclient/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-        <artifactId>health.pom</artifactId>
-        <groupId>org.universAAL.AALapplication</groupId>
-        <version>D.0.1-SNAPSHOT</version>
-        <relativePath>../health.pom</relativePath>
-    </parent>
+		<artifactId>health.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>D.0.1-SNAPSHOT</version>
+		<relativePath>../health.pom</relativePath>
+	</parent>
 
 	<packaging>bundle</packaging>
 
@@ -26,12 +26,6 @@
 
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.biomedicalsensors</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
-			<type>bundle</type>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
 		</dependency>
 		<dependency>
@@ -41,6 +35,12 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.composite</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology.services</groupId>
+			<artifactId>ont.biomedicalsensors</artifactId>
+			<version>1.3.1-SNAPSHOT</version>
+			<type>bundle</type>
 		</dependency>
 	</dependencies>
 
@@ -69,7 +69,6 @@
 				<dependency>
 					<groupId>org.universAAL.AALapplication</groupId>
 					<artifactId>health.biomedicalsensors.server</artifactId>
-					<version>1.0.0-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.universAAL.ui</groupId>
@@ -81,8 +80,13 @@
 				</dependency>
 				<dependency>
 					<groupId>org.universAAL.ui</groupId>
-					<artifactId>ui.dm.mobile</artifactId>
+					<artifactId>ui.handler.gui.swing.classicLAF</artifactId>
 				</dependency>
+				<dependency>
+					<groupId>org.universAAL.ui</groupId>
+					<artifactId>ui.handler.gui.swing.bluesteelLAF</artifactId>
+				</dependency>
+
 			</dependencies>
 		</profile>
 	</profiles>
