--- a/health/health.biomedicalsensors.server/pom.xml
+++ b/health/health.biomedicalsensors.server/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	 <parent>
-        <artifactId>health.pom</artifactId>
-        <groupId>org.universAAL.AALapplication</groupId>
-        <version>D.0.1-SNAPSHOT</version>
-        <relativePath>../health.pom</relativePath>
-    </parent>
+	<parent>
+		<artifactId>health.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>D.0.1-SNAPSHOT</version>
+		<relativePath>../health.pom</relativePath>
+	</parent>
 	<packaging>bundle</packaging>
 	<artifactId>health.biomedicalsensors.server</artifactId>
 	<name>Biomedical Sensors App Server</name>
@@ -19,31 +19,35 @@
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.biomedicalsensors</artifactId>
-			<type>bundle</type>
-			<version>1.2.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.composite</artifactId>
-
 		</dependency>
+
 		<dependency>
-			<groupId>org.universAAL.AALapplicationUtils.zephyrutils</groupId>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.drools</artifactId>
+			<version>C.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.universAAL.ontology.services</groupId>
+			<artifactId>ont.biomedicalsensors</artifactId>
+			<version>1.3.1-SNAPSHOT</version>
+			<type>bundle</type>
+		</dependency>
+
+		<dependency>
+			<groupId>gr.certh.AALApplicationUtils</groupId>
 			<artifactId>zephyrutils</artifactId>
 			<version>1.0</version>
 		</dependency>
-<dependency>
- <groupId>org.universAAL.ontology</groupId>
- <artifactId>ont.drools</artifactId>
- <version>C.0.1-SNAPSHOT</version>
-</dependency>
+
 		<dependency>
-			<groupId>org.universAAL.AALapplicationUtils.bluecove</groupId>
+			<groupId>org.bluecove</groupId>
 			<artifactId>bluecove</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -63,5 +67,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
