--- a/long_term_behav/drools.reasoner/pom.xml
+++ b/long_term_behav/drools.reasoner/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>drools.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>C.0.1-SNAPSHOT</version>
+		<version>D.0.1-SNAPHOT</version>
 		<relativePath>../drools.pom</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -15,50 +15,34 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation.osgi</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service.osgi</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.0</version>
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.universAAL.middleware</groupId>-->
-		<!--			<artifactId>mw.bus.io</artifactId>-->
-		<!--			<version>1.0.1-SNAPSHOT</version>-->
-		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context.osgi</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.0</version>
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.universAAL.ontology</groupId>-->
-		<!--			<artifactId>ont.profile</artifactId>-->
-		<!--			<version>1.0.1-SNAPSHOT</version>-->
-		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr</artifactId>
 			<version>3.1.3</version>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
-			<version>${project.version}</version>
+			<version>D.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-core</artifactId>
 			<version>5.3.0.Final</version>
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.drools</groupId>-->
-		<!--			<artifactId>drools-persistence-jpa</artifactId>-->
-		<!--			<version>5.3.0.Final</version>-->
-		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>knowledge-api</artifactId>
@@ -85,129 +69,7 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.codehaus.btm</groupId>-->
-		<!--			<artifactId>btm</artifactId>-->
-		<!--			<version>1.3.3</version>-->
-		<!--		</dependency>-->
-<!---->
-		<!--		<dependency>-->
-		<!--			<groupId>org.apache.aries.jpa</groupId>-->
-		<!--			<artifactId>org.apache.aries.jpa.api</artifactId>-->
-		<!--			<version>0.3</version>-->
-		<!--		</dependency>-->
-		<!--		-->
-		<!--				<dependency>-->
-		<!--			<groupId>org.apache.aries.jpa</groupId>-->
-		<!--			<artifactId>org.apache.aries.jpa.container</artifactId>-->
-		<!--			<version>0.3</version>-->
-		<!--		</dependency>-->
-		<!--		-->
-		<!--				<dependency>-->
-		<!--			<groupId>org.apache.geronimo.specs</groupId>-->
-		<!--			<artifactId>geronimo-jpa_2.0_spec</artifactId>-->
-		<!--			<version>1.1</version>-->
-		<!--		</dependency>-->
-<!---->
-		<!--		<dependency>-->
-		<!--			<groupId>org.osgi</groupId>-->
-		<!--			<artifactId>org.osgi.enterprise</artifactId>-->
-		<!--			<version>4.2.0</version>-->
-		<!--		</dependency>-->
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.hibernate</groupId>-->
-		<!--			<artifactId>hibernate</artifactId>-->
-		<!--			<version>3.2.6.ga</version>-->
-		<!--		</dependency>-->
-<!---->
-		<!--		<dependency>-->
-		<!--			<groupId>org.hibernate</groupId>-->
-		<!--			<artifactId>ejb3-persistence</artifactId>-->
-		<!--			<version>1.0.2.GA</version>-->
-		<!--		</dependency>-->
-<!---->
-		<!--		<dependency>-->
-		<!--			<groupId>org.hibernate.java-persistence</groupId>-->
-		<!--			<artifactId>jpa-api</artifactId>-->
-		<!--			<version>2.0-cr-1</version>-->
-		<!--		</dependency>-->
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.hibernate</groupId>-->
-		<!--			<artifactId>org.hibernate.ejb</artifactId>-->
-		<!--			<version>4.1.0.Final</version>-->
-		<!--		</dependency>-->
-
-		<!--				<dependency>-->
-		<!--					<groupId>antlr</groupId>-->
-		<!--					<artifactId>antlr</artifactId>-->
-		<!--					<version>2.7.7</version>-->
-		<!--				</dependency>-->
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.dynamicjava.osgi</groupId>-->
-		<!--			<artifactId>service-binding-utils</artifactId>-->
-		<!--			<version>1.0.0</version>-->
-		<!--		</dependency>-->
-<!---->
-		<!--		<dependency>-->
-		<!--			<groupId>org.dynamicjava.osgi</groupId>-->
-		<!--			<artifactId>classloading-utils</artifactId>-->
-		<!--			<version>1.0.1</version>-->
-		<!--		</dependency>-->
-<!---->
-		<!--		<dependency>-->
-		<!--			<groupId>org.dynamicjava.osgi</groupId>-->
-		<!--			<artifactId>dynamic-jpa</artifactId>-->
-		<!--			<version>1.0.0</version>-->
-		<!--		</dependency>-->
-<!---->
-		<!--		<dependency>-->
-		<!--			<groupId>org.hibernate</groupId>-->
-		<!--			<artifactId>hibernate-core</artifactId>-->
-		<!--			<version>4.1.2.Final</version>-->
-		<!--		</dependency>-->
-
-		<!--		<dependency>-->
-		<!--		 <groupId>org.universAAL.samples</groupId>-->
-		<!--  	     <artifactId>service.utils</artifactId>-->
-		<!--  	     <version>0.1.0-SNAPSHOT</version>-->
-		<!--		</dependency>-->
-		<!--		-->
-		<!--		<dependency>-->
-		<!--		<groupId>org.universAAL.samples</groupId>-->
-		<!--	<artifactId>service.utils</artifactId>-->
-		<!--	<version>0.1.0-SNAPSHOT</version>-->
-		<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.eclipse.jdt</groupId>-->
-<!--			<artifactId>core</artifactId>-->
-<!--			<version>3.3.0-v_771</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.eclipse.core</groupId>-->
-<!--			<artifactId>org.eclipse.core.resources</artifactId>-->
-<!--			<version>3.6.0.v20100526-0737</version>-->
-<!--		</dependency>-->
 	</dependencies>
-
-<!--	<profiles>-->
-<!--		<profile>-->
-<!--			<id>uAAL-Runtime</id>-->
-<!--			<dependencies>-->
-<!--				<dependency>-->
-<!--					<groupId>org.mvel</groupId>-->
-<!--					<artifactId>mvel2</artifactId>-->
-<!--					<version>2.1.0.drools2</version>-->
-<!--					<scope>compile</scope>-->
-<!--				</dependency>-->
-<!--			</dependencies>-->
-<!--		</profile>-->
-<!--	</profiles>-->
-
-
 	<build>
 		<plugins>
 			<plugin>
@@ -221,25 +83,9 @@
 						</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<!--						<Import-Package>bitronix.tm.jndi,*</Import-Package>-->
-						<!--						<JPA-PersistenceUnits>o</JPA-PersistenceUnits>-->
-						<!--
-							<Meta-Persistence>META-INF/persistence.xml</Meta-Persistence>
-						-->
 					</instructions>
 				</configuration>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>org.codehaus.mojo</groupId>-->
-<!--				<artifactId>build-helper-maven-plugin</artifactId>-->
-<!--				<configuration>-->
-<!--					<skipAttach>false</skipAttach>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
-<!--			<plugin>-->
-<!--				<groupId>org.universAAL.support</groupId>-->
-<!--				<artifactId>uaal-maven-plugin</artifactId>-->
-<!--			</plugin>-->
 		</plugins>
 	</build>
 	<repositories>
