--- a/.gitattributes
+++ b/.gitattributes
@@ -2734,6 +2734,7 @@ long_term_behav/drools.reasoner/Drools_basic_step_by_step.launch -text
 long_term_behav/drools.reasoner/LTBA_Publisher_B.0.1_OSGI_enterprise.launch -text
 long_term_behav/drools.reasoner/META-INF/persistence.xml -text
 long_term_behav/drools.reasoner/OSGi_Enterprise.launch -text
+long_term_behav/drools.reasoner/PhysicalActivityMonitor_UIClient_1.2.1-SNAPSHOT.launch -text
 long_term_behav/drools.reasoner/artifact.composite -text
 long_term_behav/drools.reasoner/persistence.xml -text
 long_term_behav/drools.reasoner/pom.xml -text
@@ -2745,6 +2746,7 @@ long_term_behav/drools.reasoner/src/main/resources/persistence.xml -text
 long_term_behav/drools.reasoner/src/main/resources/reasoner.drl -text
 long_term_behav/drools.reasoner/src/main/resources/reasonerAuxClasses.drl -text
 long_term_behav/drools.reasoner/src/main/resources/reasonerRaw.drl -text
+long_term_behav/drools.reasoner/src/main/resources/users/droolsWorkshop1.drl -text
 long_term_behav/ltba.manager/LTBA_Demo_B.0.1.launch -text
 long_term_behav/ltba.manager/LTBA_Demo_B.0.1_with_reasoner_UI_Services_DIRTYDRAFT.launch -text
 long_term_behav/ltba.manager/pom.xml -text
