--- a/long_term_behav/ltba.manager/pom.xml
+++ b/long_term_behav/ltba.manager/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>ltba.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>C.0.1-SNAPSHOT</version>
+		<version>D.0.1-SNAPSHOT</version>
 		<relativePath>../ltba.pom</relativePath>
 	</parent>
 	<artifactId>ltba.manager</artifactId>
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context.osgi</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -59,6 +59,11 @@
 			<groupId>org.universaal.aalapplication</groupId>
 			<artifactId>ltba.ui</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ui</groupId>
+			<artifactId>ui.handler.gui.swing.bluesteelLAF</artifactId>
+			<version>1.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
