Dependency problem solved.

--- a/long_term_behav/drools.pom/pom.xml
+++ b/long_term_behav/drools.pom/pom.xml
@@ -12,10 +12,6 @@
 	<packaging>pom</packaging>
 	<name>The Drools Reasoner POM file</name>
 	<description>The Drools Reasoner POM file</description>
-	<modules>
-		<module>../ont.drools</module>
-		<module>../drools.reasoner</module>
-	</modules>
 	<dependencyManagement>
 		<dependencies>
 <!--			<dependency>-->
@@ -25,4 +21,7 @@
 <!--			</dependency>-->
 		</dependencies>
 	</dependencyManagement>
+	<modules>
+		<module>../../ontologies/ont.drools</module>
+	</modules>
 </project>
