--- a/long_term_behav/ltba.pom/pom.xml
+++ b/long_term_behav/ltba.pom/pom.xml
@@ -13,7 +13,7 @@
 	<name>POM file for LTBA project</name>
 	<description>POM file for LTBA project</description>
 	<modules>
-		<module>../ont.ltba</module>
+		<module>../../ontologies/ont.ltba</module>
 		<module>../ltba.manager</module>
 		<module>../ltba.publisher</module>
 		<module>../ltba.ui</module>
