--- a/ontologies/ont.drools/pom.xml
+++ b/ontologies/ont.drools/pom.xml
@@ -2,13 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>ont.pom</artifactId>
-		<groupId>org.universAAL.ontology</groupId>
-		<version>1.2.0</version>
+		<groupId>org.universAAL.ontology.services</groupId>
+		<version>1.3.1-SNAPSHOT</version>
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>ont.drools</artifactId>
-	<version>C.0.1-SNAPSHOT</version>
+	<version>D.0.1-SNAPSHOT</version>
 	<description>Drools ontology</description>
 	<packaging>bundle</packaging>
 	<dependencies>
@@ -20,7 +20,6 @@
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation.osgi</artifactId>
-			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -83,4 +82,24 @@
 			</releases>
 		</repository>
 	</repositories>
+	<developers>
+		<developer>
+			<id>mllorente</id>
+			<name>Miguel Llorente</name>
+			<email>mllorente@tsbtecnologias.es</email>
+			<organization>TSB Tecnologias</organization>
+			<organizationUrl>http://www.tsbtenologias.es</organizationUrl>
+			<properties>
+				<project>
+					universAAL
+				</project>
+			</properties>
+		</developer>
+	</developers>
+	<licenses>
+		<license>
+			<name>ASL 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>	
 </project>
