--- a/ont.ltba/pom.xml
+++ b/ont.ltba/pom.xml
@@ -3,12 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>ont.pom</artifactId>
-		<groupId>org.universAAL.ontology</groupId>
-		<version>1.2.0</version>
-		<relativePath>../pom/pom.xml</relativePath>
+		<groupId>org.universAAL.ontology.services</groupId>
+		<version>1.3.1-SNAPSHOT</version>
+		<relativePath>../ont.pom</relativePath>
 	</parent>
+	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.ltba</artifactId>
-	<version>C.0.1-SNAPSHOT</version>
+	<version>D.0.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>LTBA ontology.</name>
 	<description>The Long Term Behaviour Analyzer Ontologies</description>
@@ -43,12 +44,32 @@
 		<dependency>
 			<groupId>org.universaal.middleware</groupId>
 			<artifactId>mw.data.representation.osgi</artifactId>
-			<version>1.2.0</version>
+			<version>${parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universaal.middleware</groupId>
 			<artifactId>mw.bus.service.osgi</artifactId>
-			<version>1.2.0</version>
+			<version>${parent.version}</version>
 		</dependency>
 	</dependencies>
+	<developers>
+		<developer>
+			<id>mllorente</id>
+			<name>Miguel Llorente</name>
+			<email>mllorente@tsbtecnologias.es</email>
+			<organization>TSB Tecnologias</organization>
+			<organizationUrl>http://www.tsbtenologias.es</organizationUrl>
+			<properties>
+				<project>
+					universAAL
+				</project>
+			</properties>
+		</developer>
+	</developers>
+	<licenses>
+		<license>
+			<name>ASL 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
 </project>
