--- a/nutritional/nutritional.uiclient.basic/pom.xml
+++ b/nutritional/nutritional.uiclient.basic/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>nutritional.pom</artifactId>
-		<version>C.1.1-SNAPSHOT</version>
+		<version>D.0.1-SNAPSHOT</version>
 		<relativePath>../nutritional.pom</relativePath>
 	</parent>
 
