--- a/medication/medication.manager.ui.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
+++ b/medication/medication.manager.ui.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
@@ -4,4 +4,6 @@ gui.location=Unkown
 nested.subdialogs=false
 queued.forms=false
 LookandFeel.package=org.universAAL.ui.handler.gui.swing.defaultLookAndFeel
+#LookandFeel.package=org.universAAL.ui.handler.gui.swing.classic
+#LookandFeel.package=org.universAAL.ui.gui.swing.bluesteelLAF
 demo.mode=true
