--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -26,6 +26,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.osgi.compendium</artifactId>
+      <version>1.4.0</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
@@ -50,6 +55,8 @@
     <developerConnection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/medication</developerConnection>
   </scm>
   <modules>
+    <module>../medication.manager.configuration</module>
+    <module>../medication.manager.persistence</module>
     <module>../medication.manager.ont</module>
     <module>../medication.manager.service</module>
     <module>../medication.manager.shell.commands</module>
