--- a/medication/medication.manager.shell.commands/pom.xml
+++ b/medication/medication.manager.shell.commands/pom.xml
@@ -24,6 +24,13 @@
       <artifactId>org.apache.felix.gogo.shell</artifactId>
       <version>0.10.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.universAAL.AALapplication</groupId>
+      <artifactId>medication.manager.persistence</artifactId>
+      <version>C.0.1-SNAPSHOT</version>
+    </dependency>
+
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
