--- a/medication/medication.manager.ui.runner/pom.xml
+++ b/medication/medication.manager.ui.runner/pom.xml
@@ -24,17 +24,22 @@
             <provision>scan-composite:mvn:org.universAAL.ontology/ont.composite/1.2.0/composite</provision>
             <!-- Platform -->
             <!-- <provision>scan-composite:mvn:org.universAAL.context/ctxt.che/1.1.0/composite</provision> -->
-            <!-- <provision>scan-composite:mvn:org.universAAL.context/ctxt.che.mobile/1.1.0/composite</provision> -->
+            <!-- <provision>s5can-composite:mvn:org.universAAL.context/ctxt.che.mobile/1.1.0/composite</provision> -->
             <!-- <provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.1.0/composite</provision> -->
             <provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.0/composite</provision>
             <!--<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui/1.1.0/composite</provision>-->
             <!-- <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.1.0/composite</provision> -->
             <provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.0/composite</provision>
+            <!--<provision>wrap:mvn:org.universAAL.ui/ui.handler.swing.classicLAF/1.3.0</provision>-->
+            <!--<provision>wrap:mvn:org.universAAL.ui/ui.handler.gui.swing.bluesteelLAF/1.3.0</provision>-->
 
             <!-- Services -->
+            <provision>mvn:org.apache.derby/derby/10.7.1.1</provision>
             <provision>mvn:org.universAAL.ontology/ont.healthmeasurement/1.2.1-SNAPSHOT</provision>
             <provision>mvn:org.universAAL.ontology/ont.disease/1.2.1-SNAPSHOT</provision>
             <provision>mvn:org.universAAL.ontology/ont.health/1.2.1-SNAPSHOT</provision>
+            <provision>mvn:org.universAAL.AALapplication/medication.manager.configuration/C.0.1-SNAPSHOT</provision>
+            <provision>mvn:org.universAAL.AALapplication/medication.manager.persistence/C.0.1-SNAPSHOT</provision>
             <provision>mvn:org.universAAL.ontology/medication.manager.ont/1.2.0-SNAPSHOT</provision>
             <provision>mvn:org.universAAL.AALapplication/medication.manager.ui/C.0.1-SNAPSHOT</provision>
             <provision>mvn:org.universAAL.AALapplication/medication.missing.services.simulation/C.0.1-SNAPSHOT
