--- a/health/health.test.treatment.generator/pom.xml
+++ b/health/health.test.treatment.generator/pom.xml
@@ -5,7 +5,7 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>health.pom</artifactId>
-  	<version>B.0.1-SNAPSHOT</version>
+  	<version>D.0.1-SNAPSHOT</version>
   	<relativePath>../heatlh.pom</relativePath>
   </parent>
   
@@ -16,15 +16,15 @@
   <dependencies>
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
-  		<artifactId>mw.bus.context</artifactId>
+  		<artifactId>mw.bus.context.core</artifactId>
   	</dependency>   	
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
-  		<artifactId>mw.bus.service</artifactId>
+  		<artifactId>mw.bus.service.core</artifactId>
   	</dependency>  	
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
-  		<artifactId>mw.bus.ui</artifactId>
+  		<artifactId>mw.bus.ui.core</artifactId>
   	</dependency> 
   	<dependency>
   		<groupId>org.universAAL.ontology</groupId>
