--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -32,12 +32,12 @@
 
 	<modules>
 		<module>../health.profile.manager</module>
-		<module>../health.treat.logger</module>
+		<module>../health.performedSession.manager</module>
 		<module>../health.treat.manager</module>
 		<module>../health.biomedicalsensors.server</module>
 		<module>../health.biomedicalsensors.uiclient</module>
 		<!-- module>../health.motivation</module -->
-<!-- 		<module>../health.manager</module> -->
+		<module>../health.manager</module>
 	</modules>
 
 	<dependencyManagement>
