refactoring & moving folders.

--- a/.gitignore
+++ b/.gitignore
@@ -86,33 +86,29 @@ health/health.biomedicalsensors.uiclient/.classpath
 health/health.biomedicalsensors.uiclient/.project
 health/health.biomedicalsensors.uiclient/.settings
 health/health.biomedicalsensors.uiclient/target
-health/health.manager/.classpath
-health/health.manager/.project
-health/health.manager/.settings
-health/health.manager/target
 health/health.motivation/.classpath
 health/health.motivation/.project
 health/health.motivation/.settings
 health/health.motivation/src/main/resources/rules/*.brl
 health/health.motivation/target
+health/health.performedSession.manager/.classpath
+health/health.performedSession.manager/.project
+health/health.performedSession.manager/.settings
+health/health.performedSession.manager/target
 health/health.pom/.project
 health/health.pom/.settings
 health/health.profile.manager/.classpath
 health/health.profile.manager/.project
 health/health.profile.manager/.settings
 health/health.profile.manager/target
-health/health.test.treatment.generator/.classpath
-health/health.test.treatment.generator/.project
-health/health.test.treatment.generator/.settings
-health/health.test.treatment.generator/target
-health/health.treat.logger/.classpath
-health/health.treat.logger/.project
-health/health.treat.logger/.settings
-health/health.treat.logger/target
 health/health.treat.manager/.classpath
 health/health.treat.manager/.project
 health/health.treat.manager/.settings
 health/health.treat.manager/target
+health/health.ui.client/.classpath
+health/health.ui.client/.project
+health/health.ui.client/.settings
+health/health.ui.client/target
 help_when_out/helpwhenoutside/trunk/.classpath
 help_when_out/helpwhenoutside/trunk/.project
 help_when_out/helpwhenoutside/trunk/.settings
