--- a/health/health.biomedicalsensors.server/pom.xml
+++ b/health/health.biomedicalsensors.server/pom.xml
@@ -24,7 +24,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.universAAL.ontology.services</groupId>
+			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
 		</dependency>
 
