Medication ontology moved to ontologies folder and  all Medication modules changed the version to the latest  version of the platform

--- a/.gitignore
+++ b/.gitignore
@@ -192,6 +192,7 @@ ontologies/ont.healthmeasurement/.classpath
 ontologies/ont.healthmeasurement/.project
 ontologies/ont.healthmeasurement/.settings
 ontologies/ont.healthmeasurement/target
+ontologies/ont.medication/*.iml
 ontologies/ont.message/.classpath
 ontologies/ont.message/.project
 ontologies/ont.message/.settings
