--- a/medication/medication.manager.persistence/pom.xml
+++ b/medication/medication.manager.persistence/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>C.0.1-SNAPSHOT</version>
+    <version>D.0.1-SNAPSHOT</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.configuration</artifactId>
-      <version>C.0.1-SNAPSHOT</version>
+      <version>D.0.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
