--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <artifactId>new_services.pom</artifactId>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>C.0</version>
+    <version>D.0</version>
     <relativePath>../../new_services.pom</relativePath>
   </parent>
   <artifactId>medication.manager.pom</artifactId>
-  <version>C.0.1-SNAPSHOT</version>
+  <version>D.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Medication Manager AAL Service</name>
   <url>http://forge.universaal.org/wiki/new_services:Medication_manager_universAAL_service</url>
@@ -57,7 +57,7 @@
   <modules>
     <module>../medication.manager.configuration</module>
     <module>../medication.manager.persistence</module>
-    <module>../medication.manager.ont</module>
+    <module>../../ontologies/ont.medication</module>
     <module>../medication.manager.service</module>
     <module>../medication.manager.shell.commands</module>
     <module>../medication.missing.services.simulation</module>
