--- a/medication/medication.missing.services.simulation/pom.xml
+++ b/medication/medication.missing.services.simulation/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>C.0.1-SNAPSHOT</version>
+    <version>D.0.1-SNAPSHOT</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -16,8 +16,8 @@
   <dependencies>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
-      <artifactId>medication.manager.ont</artifactId>
-      <version>1.2.0-SNAPSHOT</version>
+      <artifactId>ont.medication</artifactId>
+      <version>1.3.1-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
